--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 
 	<h1>Hello, <span id="username">stranger</span></h1>
 	<div>
-		<label for="first_name">First Name</label>
-		<input type="text" name="first_name" id="first_name">
+		<label for="firstName">First Name</label>
+		<input type="text" name="firstName" id="firstName">
 	</div>
 	<div>
-		<label for="last_name">Last Name</label>
-		<input type="text" name="last_name" id="last_name">
+		<label for="lastName">Last Name</label>
+		<input type="text" name="lastName" id="lastName">
 	</div>
 	<div>
 		<label for="city">City</label>
